--- a/github/git.html
+++ b/github/git.html
@@ -43,14 +43,16 @@
     <section>
         <h3>origin repo</h3>
         <dl>
-            <dt>push local repo and link to an origin repo</dt>
-            <dd>create an origin repo without readme</dd>
-            <dd>git remote add origin git@github.com:username/git</dd>
-            <dd>git push -u origin master</dd>
+            <dt >push local repo and link to an origin repo</dt>
+            <dd class='result'>create an origin repo without readme</dd>
+            <dd class="command">git remote add origin git@github.com:username/git</dd>
+            <dd class="command">git push -u origin master</dd>
             <dt>clone an origin repo to local</dt>
-            <dd>create an origin repo with initial readme</dd>
+            <dd class='result'>create an origin repo with initial readme</dd>
             <dd>select local workplace</dd>
-            <dd>git clone git@github.com:username/xx.git</dd>
+            <dd class="command">git clone git@github.com:username/xx.git</dd>
+            <dt>delete remote origin</dt>
+            <dd class="command">git remote remove origin</dd>
         </dl>
     </section>
     <section>
